# databeam

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  go.mod
cmd/databeam/: main.go
internal/server/: handler.go
internal/signaling/: manager.go  pins.go  pins_test.go
scripts/: deploy.sh  sync.sh
src/: main.rs
web/: index.html
